--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <div class="top">
     <div id="top_fix"></div>
     <h1>Metric/Imperial Unit Conversion</h1>
-    <div><input type="number" id="input-el"> </div>
+    <div><input type="number" id="input-el"/></div>
     <button id="button-el">Convert</button>
     </div>
     <div class="conv-unit">
         <div class="conv-desc">Lengt (Meter/Feet) 
             <div class="unit-place">            
-                <p id="M-F">1</p><p>|</p><p id="F-M">1</p>
+                <p id="M-F"> </p>
             </div>       
         </div>
         <div class="conv-desc">Volume (Liters/Gallons) 
             <div class="unit-place">            
-                <p id="L-G">1</p><p>|</p><p id="G-L">1</p>
+                <p id="L-G"></p>
             </div>       
         </div><div class="conv-desc">Mass (Kilograms/Pounds) 
             <div class="unit-place">            
-                <p id="K-P">1</p><p>|</p><p id="P-K">1</p>
+                <p id="K-P"></p>
             </div>       
         </div>
     </div>
